tests/baselines/reference/unusedImports12.errors.txt
tests/cases/compiler/a.ts(1,10): error TS6133: 'Member' is declared but its value is never read.
tests/cases/compiler/a.ts(2,8): error TS6133: 'd' is declared but its value is never read.
tests/cases/compiler/a.ts(2,23): error TS6133: 'M' is declared but its value is never read.
tests/cases/compiler/a.ts(3,13): error TS6133: 'ns' is declared but its value is never read.
tests/cases/compiler/a.ts(4,8): error TS6133: 'r' is declared but its value is never read.


==== tests/cases/compiler/a.ts (5 errors) ====
    import { Member } from './b';
             ~~~~~~
!!! error TS6133: 'Member' is declared but its value is never read.
    import d, { Member as M } from './b';
           ~
!!! error TS6133: 'd' is declared but its value is never read.
                          ~
!!! error TS6133: 'M' is declared but its value is never read.
    import * as ns from './b';
                ~~
!!! error TS6133: 'ns' is declared but its value is never read.
    import r = require("./b");
           ~
!!! error TS6133: 'r' is declared but its value is never read.
    
==== tests/cases/compiler/b.ts (0 errors) ====
    export class Member {}
    export default Member;
    
    